# collabo-whiteboard

./: CONTRIB.md  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: channels.rs  lib.rs  note.rs
protocol/: Cargo.toml
protocol/src/: channel.rs  components.rs  inputs.rs  lib.rs  message.rs
protocol/src/channel/: default.rs
server/: Cargo.toml
server/src/: main.rs  note.rs
